2010-01-02  Mark Ellis  <mark@mpellis.org.uk>

	* change package name
	* move connection scripts into common source dir

2009-12-28  Mark Ellis  <mark@mpellis.org.uk>

	* use source of synce-hal as base for synce-connector, for
	  udev/devkit support
	* add start of udev/devkit support

2009-10-16  Mark Ellis  <mark@mpellis.org.uk>

	* src/synce-unlock.py - small bugfix

2009-08-01  Mark Ellis  <mark@mpellis.org.uk>

	* put client connection socket in $libexecdir/run instead
	  of /tmp

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-04-03  Mark Ellis <mark@mpellis.org.uk>

	* src/synce-device.c - provide local iface address as hal
	  property pda.pocketpc.iface_address

2009-03-25  Mark Ellis <mark@mpellis.org.uk>

	* hal/10-synce.fdi - only use an rndis_host interface with 
	  class 239, subclass 1, protocol 1, which is a device in
	  sync mode; leave Internet Connection Sharing to networking
	  tools

2009-03-24  Mark Ellis <mark@mpellis.org.uk>

	* hal/hal-synce-rndis.in - fix typo

2009-03-23  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in - change default hal addon dir to hal/scripts

2009-03-16  Mark Ellis <mark@mpellis.org.uk>

	* hal/synce-hal-serial.in - reference correct udi when
	  checking if this is the port to use

2009-03-09  Mark Ellis <mark@mpellis.org.uk>

	* hal/synce-hal-serial.in - check if device is 2 port /
	  4 endpoint, mark first port as unused and do not start dccm

2009-02-17  Mark Ellis <mark@mpellis.org.uk>

	* install dbus config file to enable all user access to
	  our hal interface

2009-02-06  Mark Ellis <mark@mpellis.org.uk>

	* added synce-unlock.py, script to unlock a device
	  from the command line
	* configure.ac.in - added better checking of hal addon dir

2009-01-26  Mark Ellis <mark@mpellis.org.uk>

	* 0.13.1 release
	* configure.ac.in - fixed non-POSIX conditionals

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.13 release

2008-11-19  Mark Ellis <mark@mpellis.org.uk>
